# PESOA

PETALOS/: CMakeLists.txt
PETALOS/cpp/: CMakeLists.txt
PETALOS/cpp/MCDisplay/: .depend  CMakeLists.txt  LinkDef.hh  MCDisplay.cc  MCDisplay.h  RunMCDisplay.cxx
PETALOS/cpp/cmake/Modules/: FindCLHEP.cmake  FindGATE.cmake  FindLog4CPP.cmake  FindPaolina.cmake  FindROOT.cmake  FindRecPack.cmake  FindTinyXML2.cmake
PETALOS/data/: routine.c
PETALOS/job/: CEvent.job  CRT.job  CRT2.job  CRTBox5x5.job  CRTTPB.job  McDisplay.job  PhotoGenerator.job
PETALOS/job/firstStudy/: lxe.job  lxe_n1.7.job  lxe_n1.7_noCher.job  lxe_n1.7_noScint.job  lxe_noCher.job  lxe_noScint.job  lxe_tpb.job  lyso.job  lyso_n1.8.job  lyso_n1.8_noCher.job  lyso_n1.8_noScint.job  lyso_noCher.job
PETALOS/job/secondStudy/: lxe_n1.7_pde0.25.job  lxe_n1.7_pde0.25_noCher.job  lxe_n1.7_pde0.25_noScint.job  lyso_n1.8_pde0.5.job  lyso_n1.8_pde0.5_noCher.job  lyso_n1.8_pde0.5_noScint.job  test.job  testNFirst.job
PETALOS/py/ClassifyEvent/: CEvent.py  Geometry.py  Particles.py  Util.py  Xenon.py
PETALOS/py/TOF/: AFiducial.py  ATimeMap.py  CEvent.py  CRT.py  CRT2.py  CRTOld.py  DCR.py  DTOF.py  NFirst.py  TOF.py  Util.py
PETALOS/root/: histos.c  histos_nFixed.c  histos_nFixed_noCher.c  histos_nFixed_noScint.c  histos_nfirst.c  histos_noCher.c
mathematica/: LXeScintillation.nb  LXeScintillation2.nb
pyCRT/: BLogging.py  CTR.py  Event.py  FunctionExample.py  GeneratePhotons.py  LXSC.py  LXe.py  Photon.py  THisto.py  Util.py  Xenon.py  bkup.py  proto.py  system_of_units.py
pyModules/: GeneratePhotons.py  Geometry.py  LSO.py  LXe.py  LXeLifetime.py  LYSO.py  Scintillator.py  Util.py
